--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ footer { margin-top:40px; padding:20px; background:#2b2147; border-radius:20px; 
   </footer>
 </div>
 
-<div id،="modal" class="modal">
+<div id="modal" class="modal">
   <div class="panel">
     <span id="modalClose" class="close">✖</span>
     <div id="modalBody"></div>
